frontend/test/should_pass/redirect_002.grg
rule r {
	x:Node -e:Edge-> z:Node;
	y:Node;
	
	modify {
		y !-e-> z;
	}
}

