frontend/test/should_fail/basic_018.grg
rule r(-e:Edge->) {
  -e:Edge->;
  modify { }
}
